--- a/william-profile/public/index.html
+++ b/william-profile/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://kit.fontawesome.com/ff7de5a37a.js" crossorigin="anonymous"></script>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-black.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,6 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+
     <title>William Wang</title>
   </head>
   <body>
